version/0.35/_sources/api/solver/_autosummary/settings/phase_16.rst.txt
:orphan:

.. _phase_16:

phase
=====

.. autoclass:: ansys.fluent.core.generated.solver.settings_252.phase_16
    :show-inheritance:

.. rubric:: Methods

========================================   =====================================================

Method                                                                                   Summary

========================================   =====================================================
:ref:`create <create>`                         Create a new instance of the current object type.

:ref:`delete <delete>`                                                  Delete selected objects.

:ref:`rename <rename>`                                                        Rename the object.

:ref:`list <list>`                                                List the names of the objects.

:ref:`list_properties <list_properties>`                   List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                                    Create a copy of the object.

========================================   =====================================================

.. rubric:: Named object type

:ref:`phase_16_child <phase_16_child>`


.. rubric:: Included in:

==========================================   ======================================

Parent                                                                      Summary

==========================================   ======================================
:ref:`settings_14 <settings_14>`                 Domain name to define settings on.

:ref:`periodic_2_child <periodic_2_child>`         'child_object_type' of periodic.

==========================================   ======================================

